--- a/aula12ex/ex014/estilo.css
+++ b/aula12ex/ex014/estilo.css
@@ -9,12 +9,17 @@ header {
 }
 
 section{
-    background-color: white;
+    background: white;
     border-radius: 10px;
     padding: 15px;
     width: 500px;
     margin: auto;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.363);
+}
+
+div {
+    text-align: center;
+    padding: 8px;
 }
 
 footer {
